--- a/notes.html
+++ b/notes.html
@@ -82,35 +82,35 @@
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
               <section class="tag-cloud">
-                <h4>University</h4>
+                <h4><i class="fas fa-university"></i> University</h4>
                 <div class="tag-container" data-filter="university">
                   <!-- 动态生成大学标签 -->
                 </div>
               </section>
 
               <section class="tag-cloud">
-                <h4>Year</h4>
+                <h4><i class="fas fa-calendar-alt"></i> Year</h4>
                 <div class="tag-container" data-filter="year">
                   <!-- 动态生成年份标签 -->
                 </div>
               </section>
 
               <section class="tag-cloud">
-                <h4>Level</h4>
+                <h4><i class="fas fa-layer-group"></i> Level</h4>
                 <div class="tag-container" data-filter="level">
                   <!-- 动态生成级别标签 -->
                 </div>
               </section>
 
               <section class="tag-cloud">
-                <h4>Subject</h4>
+                <h4><i class="fas fa-feather"></i> Subject</h4>
                 <div class="tag-container" data-filter="subject">
                   <!-- 动态生成学科标签 -->
                 </div>
               </section>
 
               <section class="tag-cloud">
-                <h4>Language</h4>
+                <h4><i class="fas fa-language"></i> Language</h4>
                 <div class="tag-container" data-filter="language">
                   <!-- 动态生成学科标签 -->
                 </div>
