--- a/notes.html
+++ b/notes.html
@@ -971,6 +971,20 @@
 
 <script>
   class NotesFilter {
+
+    get typeColorMap() {
+    return {
+      Graduate: 'graduate',
+      Undergraduate: 'undergraduate',
+      Physics: 'physics',
+      Math: 'math',
+      Engineering: 'engineering',
+      GRE: 'gre',
+      EN: 'en',
+      中文: 'chinese'
+    };
+  }
+
     constructor() {
       this.activeFilters = {
         university: new Set(),
@@ -1039,11 +1053,17 @@
     }
 
     extractMetadataFromPills(card) {
-      card.querySelectorAll(".pill").forEach((pill) => {
-        const type = this.typeMap[pill.textContent.trim()];
-        if (type) card.dataset[type] = pill.textContent.trim();
-      });
-    }
+      card.querySelectorAll('.pill').forEach(pill => {
+      const text = pill.textContent.trim();
+      const type = this.typeMap[text];
+
+      // 保留原data-type属性和添加颜色类
+      if (type) {
+        pill.dataset.type = text; // 保留原data-type属性
+        pill.classList.add(this.typeColorMap[text]); // 添加颜色类
+        card.dataset[type] = text;
+      }
+    }}
 
     /* 生成筛选标签 */
     generateFilterTags() {
