--- a/notes.html
+++ b/notes.html
@@ -908,6 +908,18 @@
     margin-top: 2rem;
   }
 
+  .tag-cloud h4 {
+    display: flex;
+    align-items: center;
+    gap: 15px; /* 控制图标与文字的间距 */
+  }
+
+  .tag-cloud h4 i {
+    width: 24px; /* 固定图标容器宽度 */
+    text-align: center; /* 图标水平居中 */
+    font-size: 1.1em; /* 统一图标大小（可选） */
+  }
+
   .tag-container {
     display: flex;
     flex-wrap: wrap;
