--- a/notes.html
+++ b/notes.html
@@ -1223,7 +1223,7 @@
       ].filter(Boolean);
 
       searchStatus.textContent = activeFilters.length
-        ? `Showing results for: ${activeFilters.join(", ")}`
+        ? `Showing results for "${activeFilters.join(", ")}"`
         : "";
     }
   }
