--- a/notes.html
+++ b/notes.html
@@ -139,10 +139,10 @@
                       >
                     </h3>
                   </header>
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Quantum Information (Fall 2023)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
                         <span class="pill">EN</span>
@@ -163,10 +163,10 @@
                       </div>
                     </div>
                   </div>
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Quantum Optics (Fall 2023)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
                         <span class="pill">EN</span>
@@ -184,10 +184,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Mathematical Methods for Physicists (Fall 2023)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Math</span>
                         <span class="pill">EN</span>
@@ -211,10 +211,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Advanced Classical Mechanics (Fall 2023)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
                         <span class="pill">EN</span>
@@ -233,10 +233,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Quantum Theory of Matter (Spring 2024)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
                         <span class="pill">EN</span>
@@ -255,10 +255,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Laser Technology (Spring 2024)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
                         <span class="pill">EN</span>
@@ -303,10 +303,10 @@
                       >
                     </h3>
                   </header>
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Mathematical Methods in Physics (Fall 2019)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Math</span>
                         <span class="pill">中文</span>
@@ -342,10 +342,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Theoretical Mechanics (Fall 2019)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
                         <span class="pill">EN</span>
@@ -370,10 +370,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Electromagnetics (Fall 2019)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
                         <span class="pill">中文</span>
@@ -395,10 +395,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Optics (Spring 2020)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
                         <span class="pill">中文</span>
@@ -445,10 +445,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Analogue Electronics (Spring 2020)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Engineering</span>
                         <span class="pill">中文</span>
@@ -487,10 +487,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Quantum Mechanics (Fall 2020)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
                         <span class="pill">中文</span>
@@ -524,10 +524,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Electrodynamics (Fall 2020)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
                         <span class="pill">中文</span>
@@ -546,10 +546,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
                         <span class="pill">中文</span>
@@ -568,10 +568,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Digital Electronics (Fall 2020)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Engineering</span>
                         <span class="pill">中文</span>
@@ -614,12 +614,12 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>
                         Thermodynamics and Statistical Physics (Spring 2021)
                       </h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
                         <span class="pill">EN</span>
@@ -647,10 +647,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Solid State Physics (Spring 2021)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
                         <span class="pill">中文</span>
@@ -669,10 +669,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Quantum Optics (Fall 2021)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
                         <span class="pill">中文</span>
@@ -698,10 +698,10 @@
                     </div>
                   </div>
 
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Introduction to Plasma Physics (Fall 2021)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
                         <span class="pill">中文</span>
@@ -726,10 +726,10 @@
                       <a href="#pku" class="scrolly">Peking University</a>
                     </h3>
                   </header>
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Quantum Mechanics II (Summer 2020)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
                         <span class="pill">中文</span>
@@ -798,10 +798,10 @@
                       <a href="#others" class="scrolly">Self-Study</a>
                     </h3>
                   </header>
-                  <div class="course-card">
-                    <div class="course-header">
+                  <div class="note-card">
+                    <div class="note-header">
                       <h4>Physics GRE (Fall 2021)</h4>
-                      <div class="course-meta">
+                      <div class="note-meta">
                         <span class="pill">GRE</span>
                         <span class="pill">Physics</span>
                         <span class="pill">EN</span>
@@ -931,7 +931,7 @@
     display: inline-block;
     padding: 4px 12px;
     border-radius: 16px;
-    background: white;
+    background: #fff;
     cursor: pointer;
     transition: all 0.2s ease;
     font-size: 0.9em;
@@ -940,12 +940,14 @@
 
   .tag-pill.active {
     color: black;
+    background: #fff;
+    border-color: currentColor;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     transform: scale(1.05);
   }
 
   /* 调整课程卡片中的标签样式 */
-  .course-meta .pill {
+  .note-meta .pill {
     background: rgb(243, 169, 80);
     color: white;
     border-radius: 15px;
@@ -1022,7 +1024,7 @@
 
     /* 初始化课程元数据 */
     initCourseMetadata() {
-      document.querySelectorAll(".course-card").forEach((card) => {
+      document.querySelectorAll(".note-card").forEach((card) => {
         const section = card.closest("section");
         if (section) {
           card.dataset.university = this.getUniversityFromSection(section.id);
@@ -1080,7 +1082,7 @@
     generateFilterTags() {
       this.filterDimensions.forEach((dim) => {
         const values = new Set();
-        document.querySelectorAll(`.course-card`).forEach((card) => {
+        document.querySelectorAll(`.note-card`).forEach((card) => {
           if (card.dataset[dim]) values.add(card.dataset[dim]);
         });
         this.populateFilterTags(dim, Array.from(values));
@@ -1169,7 +1171,7 @@
 
     /* 核心过滤逻辑 */
     filterNotes() {
-      document.querySelectorAll(".course-card").forEach((card) => {
+      document.querySelectorAll(".note-card").forEach((card) => {
         const visible = this.isCourseVisible(card);
         card.style.display = visible ? "block" : "none";
       });
@@ -1202,7 +1204,7 @@
     updateSectionVisibility() {
       document.querySelectorAll("section[id]").forEach((section) => {
         const hasVisibleCards = Array.from(
-          section.querySelectorAll(".course-card")
+          section.querySelectorAll(".note-card")
         ).some((card) => card.style.display !== "none");
 
         const title = section.querySelector("h3.custom-title");
