--- a/notes.html
+++ b/notes.html
@@ -148,7 +148,7 @@
                         <span class="pill">EN</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>
                         This course was taught by Prof. Myungshik Kim. My notes
                         were based on his lecture notes and the textbook by
@@ -172,7 +172,7 @@
                         <span class="pill">EN</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p></p>
                       <div class="resource-links">
                         <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
@@ -193,7 +193,7 @@
                         <span class="pill">EN</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p></p>
                       <div class="resource-links">
                         <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
@@ -220,7 +220,7 @@
                         <span class="pill">EN</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p></p>
                       <div class="resource-links">
                         <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
@@ -242,7 +242,7 @@
                         <span class="pill">EN</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p></p>
                       <div class="resource-links">
                         <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
@@ -264,7 +264,7 @@
                         <span class="pill">EN</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>
                         This course covers two main topics:
                         <strong style="font-weight: 700"
@@ -312,7 +312,7 @@
                         <span class="pill">中文</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>
                         This course consists of two parts:
                         <strong style="font-weight: 700"
@@ -351,7 +351,7 @@
                         <span class="pill">EN</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>
                         Taught by Prof. Sheng-You Huang, covering Lagrangian and
                         Hamiltonian Mechanics, with several applications
@@ -379,7 +379,7 @@
                         <span class="pill">中文</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>
                         Taught by Prof. Xue-Wen Chen, covering electrostatics,
                         magnetostatics, and Maxwell's equations.
@@ -404,7 +404,7 @@
                         <span class="pill">中文</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>
                         This term was unique due to COVID-19, as we had to
                         attend lectures online from home. The course was taught
@@ -454,7 +454,7 @@
                         <span class="pill">中文</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>
                         Taught by Prof. Tian-Ping Deng, based on lecture online,
                         <a href="https://www.icourse163.org/course/hust-481015"
@@ -496,7 +496,7 @@
                         <span class="pill">中文</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>
                         This course was taught by Prof. Ying Wu and Prof.
                         Jia-Hua Li. However, it overlapped with another advanced
@@ -533,7 +533,7 @@
                         <span class="pill">中文</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>Taught by Prof. Zhao-Feng Kang.</p>
                       <div class="resource-links">
                         <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
@@ -555,7 +555,7 @@
                         <span class="pill">中文</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>Taught by Prof. Yong Hu.</p>
                       <div class="resource-links">
                         <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
@@ -577,7 +577,7 @@
                         <span class="pill">中文</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>This course was taught by Prof. Qi Song.</p>
                       <div class="resource-links">
                         <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
@@ -625,7 +625,7 @@
                         <span class="pill">EN</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>
                         This course, taught by Prof. Shun Wang, was quite
                         challenging. It was conducted entirely in English,
@@ -656,7 +656,7 @@
                         <span class="pill">中文</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>Taught by Prof. Liu-Song Yuan.</p>
                       <div class="resource-links">
                         <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
@@ -678,7 +678,7 @@
                         <span class="pill">中文</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>Taught by Prof. Jia-Hua Li.</p>
                       <div class="resource-links">
                         <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
@@ -707,7 +707,7 @@
                         <span class="pill">中文</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>Taught by Prof. He-Lin Wei.</p>
                       <div class="resource-links">
                         <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
@@ -735,7 +735,7 @@
                         <span class="pill">中文</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>
                         These are my lecture notes from the Quantum Mechanics II
                         course taught by Prof. Zhixin Qian during the 2020
@@ -807,7 +807,7 @@
                         <span class="pill">EN</span>
                       </div>
                     </div>
-                    <div class="course-body">
+                    <div class="note-body">
                       <p>
                         Self-study notes for the Physics GRE exam taken in 2021.
                       </p>
