--- a/test.html
+++ b/test.html
@@ -60,6 +60,150 @@
             </div>
           </a>
         </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/london2.JPG"
+            data-lightbox="gallery"
+            data-title="London, UK"
+          >
+            <img
+              src="/images/photograph/small/london2.jpeg"
+              alt="London View"
+            />
+            <div class="photo-info">
+              <h3>London Lights</h3>
+              <p>December 2024</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/london2.JPG"
+            data-lightbox="gallery"
+            data-title="London, UK"
+          >
+            <img
+              src="/images/photograph/small/london2.jpeg"
+              alt="London View"
+            />
+            <div class="photo-info">
+              <h3>London Lights</h3>
+              <p>December 2024</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/london2.JPG"
+            data-lightbox="gallery"
+            data-title="London, UK"
+          >
+            <img
+              src="/images/photograph/small/london2.jpeg"
+              alt="London View"
+            />
+            <div class="photo-info">
+              <h3>London Lights</h3>
+              <p>December 2024</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/london2.JPG"
+            data-lightbox="gallery"
+            data-title="London, UK"
+          >
+            <img
+              src="/images/photograph/small/london2.jpeg"
+              alt="London View"
+            />
+            <div class="photo-info">
+              <h3>London Lights</h3>
+              <p>December 2024</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/london2.JPG"
+            data-lightbox="gallery"
+            data-title="London, UK"
+          >
+            <img
+              src="/images/photograph/small/london2.jpeg"
+              alt="London View"
+            />
+            <div class="photo-info">
+              <h3>London Lights</h3>
+              <p>December 2024</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/london2.JPG"
+            data-lightbox="gallery"
+            data-title="London, UK"
+          >
+            <img
+              src="/images/photograph/small/london2.jpeg"
+              alt="London View"
+            />
+            <div class="photo-info">
+              <h3>London Lights</h3>
+              <p>December 2024</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/london2.JPG"
+            data-lightbox="gallery"
+            data-title="London, UK"
+          >
+            <img
+              src="/images/photograph/small/london2.jpeg"
+              alt="London View"
+            />
+            <div class="photo-info">
+              <h3>London Lights</h3>
+              <p>December 2024</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/london2.JPG"
+            data-lightbox="gallery"
+            data-title="London, UK"
+          >
+            <img
+              src="/images/photograph/small/london2.jpeg"
+              alt="London View"
+            />
+            <div class="photo-info">
+              <h3>London Lights</h3>
+              <p>December 2024</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/london2.JPG"
+            data-lightbox="gallery"
+            data-title="London, UK"
+          >
+            <img
+              src="/images/photograph/small/london2.jpeg"
+              alt="London View"
+            />
+            <div class="photo-info">
+              <h3>London Lights</h3>
+              <p>December 2024</p>
+            </div>
+          </a>
+        </div>
 
         <!-- 其他图片条目结构相同，添加对应data-category -->
       </div>
