--- a/test.html
+++ b/test.html
@@ -62,12 +62,12 @@
         </div>
         <div class="grid-item city" data-category="city">
           <a
-            href="/images/photograph/full/london2.JPG"
+            href="/images/photograph/full/white_cliff.jpeg"
             data-lightbox="gallery"
             data-title="London, UK"
           >
             <img
-              src="/images/photograph/small/london2.jpeg"
+              src="/images/photograph/small/white_cliff.jpeg"
               alt="London View"
             />
             <div class="photo-info">
