--- a/test.html
+++ b/test.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Life - Chen's Physics World</title>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/images/icon.png" type="image/png" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="/assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="/assets/css/noscript.css"
+    /></noscript>
+
     <!-- 原有head部分保持不变 -->
     <!-- 新增灯箱样式 -->
     <link
